# CSA-Homework-5

./: CMakeLists.txt  README.md  barbershop.cpp  barbershop.h  main.cpp  people.cpp  people.h
